# quran_tadabbur

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  init.sql  pyproject.toml  requirements.txt
src/: app.py  config.py
src/database/: core.py  embeddings.py  init_db.py
src/database/engine/: postgres.py  qdrant.py
src/schemas/: verse.py
src/verse/: controller.py  model.py  service.py
