[project]
name = "quran-tadabbur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==4.0.0",
    "fastapi>=0.116.0",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "qdrant-client>=1.14.3",
    "sentence-transformers>=5.0.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
